# word-finder

./: Cargo.toml  README.md
.github/workflows/: publish.yml
data/: format.py  formatLatin.py  merge.py
src/: input.rs  letter_input.rs  main.rs  number_input.rs
