[package]
name = "word-finder"
version = "0.1.4"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI tool that finds words of a specific length with letters in a specific location."
readme = "README.md"
homepage = "https://github.com/cqb13/word-finder"
repository = "https://github.com/cqb13/word-finder"
keywords = ["cli", "tools", "utilities"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27.0"
